--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
 /node_modules
 /public/hot
 /public/storage
+/storage/exports/
 /storage/*.key
 /vendor
 /.idea
-/.vscode
 /.vagrant
+.DS_Store
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-_ide_helper.php
-_ide_helper_models.php
-.phpstorm.meta.php
+/storage/csv/
+/storage/*log/
+
+*.sublime-project
+*.sublime-workspace
+composer.lock
