--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-ide-helper": "^2.4",
+        "darkaonline/l5-swagger": "^5.5",
         "fideloper/proxy": "^4.0",
         "illuminate/support": "^5.6",
         "laravel/framework": "5.6.*",
