--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "silber/bouncer": "v1.0.0-rc.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
